--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-  <center>
-    <header></header>
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&display=swap" rel="stylesheet">
+  <!-- <center> -->
+    <!-- <header></header> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&display=swap" rel="stylesheet"> -->
     <div id="root"></div>
-  </center>
+  <!-- </center> -->
   <script src="build/bundle.js"></script>
 </body>
 
